# airflow-comics

./: README.md  create-user.sh  pyproject.toml  requirements.txt  run-server.sh
dags/: comics.py
data/: comics.json  message.txt
src/airflow_comics/: config.py  constants.py  scrape.py  utils.py
