[project]
name = "airflow-comics"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "kwchun0520", email = "ckw05200@gmail.com"},
]
dependencies = [
    "alembic>=1.13.1",
    "apache-airflow>=2.9.1",
    "bleach>=6.1.0",
    "chardet>=5.2.0",
    "click>=8.1.7",
    "configparser>=7.0.0",
    "croniter>=2.0.5",
    "dill>=0.3.8",
    "docutils>=0.21.2",
    "flask>=2.2.5",
    "flask-admin>=1.6.1",
    "flask-cache>=0.13.1",
    "flask-login>=0.6.3",
    "flask-swagger>=0.2.14",
    "flask-wtf>=1.2.1",
    "funcsigs>=1.0.2",
    "future>=1.0.0",
    "gitdb2>=4.0.2",
    "gitpython>=3.1.43",
    "gunicorn>=22.0.0",
    "html5lib>=1.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "lockfile>=0.12.2",
    "lxml>=5.2.2",
    "mako>=1.3.5",
    "markdown>=3.6",
    "markupsafe>=2.1.5",
    "numpy>=1.26.4",
    "ordereddict>=1.1",
    "pandas>=2.2.2",
    "psutil>=5.9.8",
    "pygments>=2.18.0",
    "python-daemon>=3.0.1",
    "python-dateutil>=2.9.0.post0",
    "python-editor>=1.0.4",
    "python-nvd3>=0.16.0",
    "python-slugify>=8.0.4",
    "pytz>=2024.1",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "setproctitle>=1.3.3",
    "slackclient>=2.9.4",
    "smmap2>=3.0.1",
    "sqlalchemy>=1.4.52",
    "tabulate>=0.9.0",
    "thrift>=0.20.0",
    "unidecode>=1.3.8",
    "webencodings>=0.5.1",
    "websocket-client>=1.8.0",
    "werkzeug>=2.2.3",
    "wtforms>=3.1.2",
    "zope-deprecation>=5.0",
    "kubernetes>=29.0.0",
    "apache-airflow-providers-slack>=8.7.0",
    "apache-airflow-providers-telegram>=4.5.0",
    "selenium>=4.22.0",
    "webdriver-manager>=4.0.1",
    "alembic",
    "apache-airflow",
    "bleach",
    "chardet",
    "click",
    "configparser",
    "croniter",
    "dill",
    "docutils",
    "flask",
    "flask-admin",
    "flask-cache",
    "flask-login",
    "flask-swagger",
    "flask-wtf",
    "funcsigs",
    "future",
    "gitdb2",
    "gitpython",
    "gunicorn",
    "html5lib",
    "itsdangerous",
    "jinja2",
    "lockfile",
    "lxml",
    "mako",
    "markdown",
    "markupsafe",
    "numpy",
    "ordereddict",
    "pandas",
    "psutil",
    "pygments",
    "python-daemon",
    "python-dateutil",
    "python-editor",
    "python-nvd3",
    "python-slugify",
    "pytz",
    "pyyaml",
    "requests",
    "setproctitle",
    "slackclient",
    "smmap2",
    "sqlalchemy",
    "tabulate",
    "thrift",
    "unidecode",
    "webencodings",
    "websocket-client",
    "werkzeug",
    "wtforms",
    "zope-deprecation",
    "python-telegram-bot>=21.2",
    "graphviz>=0.20.3",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

